--- a/DeliveryExpress/wwwroot/index.html
+++ b/DeliveryExpress/wwwroot/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="utf-8" />
     <title>Delivery Express</title>
+    <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />
+
+    <style>
+        body {
+            margin: 0;
+            padding:0;
+        }
+
+        #map {
+            position: absolute; 
+            top: 0; 
+            bottom: 0; 
+            width: 100%;
+        }
+    </style>
+
+    <script>
+        window.onload = function () {
+            L.mapbox.accessToken = 'pk.eyJ1IjoiYWxpbW9uIiwiYSI6ImNpcDdzeWF3cjAxNmxzeG5yeHRteTAxZXgifQ.7MJPz9HOpjitcYyKHk7GgQ';
+            window.map = L.mapbox.map('map', 'mapbox.streets');
+
+            map.setView([-41.2889, 174.7772], 12);
+        };
+    </script>
 </head>
 <body>
-
     <div id="map"></div>
 </body>
 </html>
