added info control and removed attribution control

--- a/DeliveryExpress/wwwroot/index.html
+++ b/DeliveryExpress/wwwroot/index.html
@@ -33,8 +33,9 @@
             layers.map.addTo(map);
             L.control.layers(layers).addTo(map);
 
-            L.control.scale({ imperial: false, position: "bottomleft" }).addTo(map);
-
+            L.control.scale({ imperial: false, position: "bottomright" }).addTo(map);
+            map.addControl(L.mapbox.infoControl({ position: "bottomleft" }));
+            map.removeControl(map.attributionControl);
             map.setView([-41.2889, 174.7772], 12);
         };
     </script>
