show roadwork as a polygon

--- a/DeliveryExpress/wwwroot/index.html
+++ b/DeliveryExpress/wwwroot/index.html
@@ -20,6 +20,7 @@
     </style>
     <script src="js/markers.js"></script>
     <script src="js/paths.js"></script>
+    <script src="js/roadworks.js"></script>
     <script>
 
         function setupMap() {
@@ -80,6 +81,21 @@
 
             var layer = L.geoJson(paths, { color: "#ff8c00", weight: 3, opacity: 0.7 });
             layer.addTo(map);
+
+            var latLngs = roadworks.features[0].geometry.coordinates;
+            latLngs[0].forEach(function (latLng) { latLng.reverse(); });
+
+            var polygon = L.polygon(latLngs, {
+                fillColor: "#aa0000",
+                fillOpacity: 0.3,
+                color: "#aa0000"
+            }).addTo(map);
+
+
+            polygon.bindPopup("Dates: <b>9 Sep - 13 Sep</b><br />Times: <b>07:00-13:00</b>");
+            polygon.openPopup();
+
+            map.fitBounds(polygon.getBounds());
 
         };
 
