--- a/DeliveryExpress/wwwroot/index.html
+++ b/DeliveryExpress/wwwroot/index.html
@@ -28,6 +28,17 @@
             font-size: 10px;
             font-weight: bold;
         }
+
+        #filters {
+            border: 1px solid #a0a0a0;
+            background: #fff;
+            position: absolute;
+            bottom: 50px;
+            left: 10px;
+            z-index: 100;
+            padding: 5px;
+            border-radius: 3px;
+        }
     </style>
     <script src="js/markers.js"></script>
     <script src="js/paths.js"></script>
@@ -54,7 +65,7 @@
             map.setView([-41.2889, 174.7772], 12);
         }
 
-        function showMarkers() {
+        function showMarkers(filterValues) {
             var icons = {
                 "Truck": L.icon({
                     iconUrl: "img/truck.png",
@@ -82,10 +93,15 @@
                 },
                 onEachFeature: function (feature, layer) {
                     layer.bindPopup(feature.properties.title);
+                },
+                filter: function (feature) {
+                    return filterValues[feature.properties.description];
                 }
             });
 
             layer.addTo(map);
+
+            return layer;
         }
 
         function showRoute() {
@@ -106,41 +122,67 @@
             }).addTo(map);
         }
 
-        window.onload = function () {
-            setupMap();
-            showMarkers();
-            showRoute();
-            showRoadworks();
+        function showSuburbs() {
+            var layer = L.geoJson(suburbs, {
+                color: "#c0c0c0", weight: 2, opacity: 0.7, fillOpacity: 0,
+                onEachFeature: function (feature, layer) {
+                    layer.bindPopup(feature.properties.suburb);
+                    layer.on("dblclick", function (event) {
+                        map.fitBounds(event.target.getBounds());
+                        event.target.closePopup();
+                    });
+                }
+            }).addTo(map);
+        }
 
-            markers = [];
-            timedPaths.features.forEach(function (feature) {
-                var icon = L.divIcon({ html: feature.properties.timestamp.slice(10), className: "timestamp" });
-                markers.push(L.marker(feature.geometry.coordinates.reverse(), { icon: icon }));
-            });
+        function getFilterValues() {
+            var checkboxes = document.getElementsByClassName('filter');
 
-            var timestampLayer = L.featureGroup(markers);
+            var values = {};
 
-            if (map.getZoom() > minTimestampZoom) {
-                timestampLayer.addTo(map);
+            for (var i = 0; i < checkboxes.length; i++) {
+                values[checkboxes[i].value] = checkboxes[i].checked;
             }
 
-            var minTimestampZoom = 15;
+            return values;
+        }
 
-            map.on("zoomend", function (event) {
-                if (map.getZoom() >= minTimestampZoom && !map.hasLayer(timestampLayer)) {
-                    map.addLayer(timestampLayer);
-                }
+        window.onload = function () {
+            setupMap();
+            showRoute();
+            showRoadworks();
+            showSuburbs();
 
-                if (map.getZoom() < minTimestampZoom && map.hasLayer(timestampLayer)) {
-                    map.removeLayer(timestampLayer);
-                }
-            });
+            var markerLayer = showMarkers(getFilterValues());
 
+            // When the control is updated, re-filter markers
+            var filters = document.getElementById('filters');
+            filters.onchange = function () {
+                map.removeLayer(markerLayer);
+                markerLayer = showMarkers(getFilterValues());
+            };
         };
 
     </script>
 </head>
 <body>
     <div id="map"></div>
+<div id = "filters">
+    <div>
+        <input type = "checkbox" checked = "checked" class = "filter"
+                name = "filter" id = "truck" value = "Truck" />
+        <label for = "truck">Trucks</label>
+    </div>
+    <div>
+        <input type = "checkbox" checked = "checked" class = "filter"
+                name = "filter" id = "van" value = "Van" />
+        <label for = "van">Vans</label>
+    </div>
+    <div>
+        <input type = "checkbox" checked = "checked" class = "filter"
+                name = "filter" id = "scooter" value = "Scooter" />
+        <label for = "scooter">Scooters</label>
+    </div>
+</div>
 </body>
 </html>
