--- a/DeliveryExpress/wwwroot/index.html
+++ b/DeliveryExpress/wwwroot/index.html
@@ -5,6 +5,9 @@
     <title>Delivery Express</title>
     <script src='https://api.tiles.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
     <link href='https://api.tiles.mapbox.com/mapbox.js/v2.2.4/mapbox.css' rel='stylesheet' />
+
+    <script src="js/leaflet.magnifyingglass.js"></script>
+    <link href="css/leaflet.magnifyingglass.css" rel="stylesheet" />
     <style>
         body {
             margin: 0;
@@ -102,7 +105,19 @@
                 "<p><strong>Pending pickups:</strong> 63</p>";
         }
 
-        function showMarkers(filterValues) {
+        function createMagnifyingGlass(latLng, layers) {
+            var magnifyingGlass = L.magnifyingGlass({
+                fixedZoom: Math.max(15, map.getZoom() + 1),
+                radius: 150,
+                fixedPosition: true,
+                latLng: latLng,
+                layers: layers
+            });
+
+            return magnifyingGlass;
+        }
+
+        function createMarkers(filterValues) {
             var icons = {
                 "Truck": L.icon({
                     iconUrl: "img/truck.png",
@@ -142,6 +157,23 @@
 
                     layer.on("mouseout", function (event) {
                         showFleetStats();
+                    });
+
+                    layer.on("contextmenu", function (event) {
+                        var glass = createMagnifyingGlass(event.latlng, [
+                            L.mapbox.tileLayer("mapbox.streets"),
+                            createMarkers(filterValues)
+                        ]);
+
+                        glass.on('click', function () {
+                            map.removeLayer(glass);
+                        });
+
+                        map.once('click', function () {
+                            map.removeLayer(glass);
+                        });
+
+                        glass.addTo(map);
                     });
                 },
                 filter: function (feature) {
@@ -204,13 +236,13 @@
             showSuburbs();
             showFleetStats();
 
-            var markerLayer = showMarkers(getFilterValues());
+            var markerLayer = createMarkers(getFilterValues());
 
             // When the control is updated, re-filter markers
             var filters = document.getElementById('filters');
             filters.onchange = function () {
                 map.removeLayer(markerLayer);
-                markerLayer = showMarkers(getFilterValues());
+                markerLayer = createMarkers(getFilterValues());
             };
         };
 
